# weatherpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
.github/actions/: cpp.yml
.github/workflows/: bpp-build-win.yml  cpp-build-linux.yml  cpp-build-macos.yml  cpp-build-win.yml  cpp.yml
src/: ConfigHandler.cpp  ConfigHandler.h  Const.h  GeoIPResolver.cpp  GeoIPResolver.h  main.cpp
src/provider/: IWeatherProvider.h  OpenWeatherMap.cpp  OpenWeatherMap.h  WeatherData.cpp  WeatherData.h  WeatherProviderFactory.cpp  WeatherProviderFactory.h
